@@ -663,7 +663,7 @@ new Test.Unit.Runner({
 
   'testLastIndexOf': function() {
     // tests based on the V8 project's String.prototype.lastIndexOf unit tests
-    var source = 'test test test';
+    var source = Fuse.String('test test test');
     this.assertEqual(5,  source.lastIndexOf('test', 5));
     this.assertEqual(5,  source.lastIndexOf('test', 6));
     this.assertEqual(0,  source.lastIndexOf('test', 4));
@@ -673,9 +673,10 @@ new Test.Unit.Runner({
     this.assertEqual(-1, source.lastIndexOf());
     this.assertEqual(10, source.lastIndexOf('test', 'string'));
 
-    // Chrome fails this test
-    this.assertEqual(0, source.lastIndexOf('test', -1), 'Chrome fails this test.');
-    //this.assertEqual(1,  new Fuse.String().lastIndexOf.length); 
+    this.assertEqual(0, source.lastIndexOf('test', -1),
+      'failed with negative position');
+
+    // this.assertEqual(1,  new Fuse.String().lastIndexOf.length); 
 
     for (var i = source.length + 10; i >= 0; i--) {
       var expected = i < source.length ? i : source.length;
