@@ -1,3 +1,5 @@
+* Optimize Fuse.String#lastIndexOf and fix a Chrome bug where negative positions aren't set to 0. [jddalton]
+
 * Optimize property lookup speeds by storing references to longer namespaced objects and simplifying method aliases. [jddalton]
 
 * Make Fusebox fallback on Fuse._docEl instead of document HEAD when inserting an iframe. [jddalton]
